docs/envoy/v1.13.0/_sources/api-v3/extensions/transport_sockets/tap/v3/tap.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/transport_sockets/tap/v3/tap.proto:

Tap
===

.. _extension_envoy.transport_sockets.tap:


This extension may be referenced by the qualified name *envoy.transport_sockets.tap*

.. note::
  This extension is functional but has not had substantial production burn time, use only with this caveat.

  This extension is not hardened and should only be used in deployments where both the downstream and upstream are trusted.


.. _envoy_v3_api_msg_extensions.transport_sockets.tap.v3.Tap:

extensions.transport_sockets.tap.v3.Tap
---------------------------------------

`[extensions.transport_sockets.tap.v3.Tap proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/extensions/transport_sockets/tap/v3/tap.proto#L20>`_

Configuration for tap transport socket. This wraps another transport socket, providing the
ability to interpose and record in plain text any traffic that is surfaced to Envoy.

.. code-block:: json

  {
    "common_config": "{...}",
    "transport_socket": "{...}"
  }

.. _envoy_v3_api_field_extensions.transport_sockets.tap.v3.Tap.common_config:

common_config
  (:ref:`extensions.common.tap.v3.CommonExtensionConfig <envoy_v3_api_msg_extensions.common.tap.v3.CommonExtensionConfig>`, *REQUIRED*) Common configuration for the tap transport socket.
  
  
.. _envoy_v3_api_field_extensions.transport_sockets.tap.v3.Tap.transport_socket:

transport_socket
  (:ref:`config.core.v3.TransportSocket <envoy_v3_api_msg_config.core.v3.TransportSocket>`, *REQUIRED*) The underlying transport socket being wrapped.
  
  

