docs/envoy/v1.22.0/_sources/api-v3/extensions/transport_sockets/tap/v3/tap.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/transport_sockets/tap/v3/tap.proto:

Tap
===


This documentation is for the Envoy v3 API.

As of Envoy v1.18 the v2 API has been removed and is no longer supported.

If you are upgrading from v2 API config you may wish to view the v2 API documentation:

    :ref:`config/transport_socket/tap/v2alpha/tap.proto <v1.17:envoy_api_file_envoy/config/transport_socket/tap/v2alpha/tap.proto>`



.. _extension_envoy.transport_sockets.tap:

This extension may be referenced by the qualified name ``envoy.transport_sockets.tap``

.. note::
  This extension is functional but has not had substantial production burn time, use only with this caveat.

  This extension is not hardened and should only be used in deployments where both the downstream and upstream are trusted.

.. tip::
  This extension extends and can be used with the following extension categories:


  - :ref:`envoy.transport_sockets.downstream <extension_category_envoy.transport_sockets.downstream>`

  - :ref:`envoy.transport_sockets.upstream <extension_category_envoy.transport_sockets.upstream>`


.. _envoy_v3_api_msg_extensions.transport_sockets.tap.v3.Tap:

extensions.transport_sockets.tap.v3.Tap
---------------------------------------

:repo:`[extensions.transport_sockets.tap.v3.Tap proto] <api/envoy/extensions/transport_sockets/tap/v3/tap.proto#L22>`

Configuration for tap transport socket. This wraps another transport socket, providing the
ability to interpose and record in plain text any traffic that is surfaced to Envoy.

.. code-block:: json

  {
    "common_config": "{...}",
    "transport_socket": "{...}"
  }

.. _envoy_v3_api_field_extensions.transport_sockets.tap.v3.Tap.common_config:

common_config
  (:ref:`extensions.common.tap.v3.CommonExtensionConfig <envoy_v3_api_msg_extensions.common.tap.v3.CommonExtensionConfig>`, *REQUIRED*) Common configuration for the tap transport socket.
  
  
.. _envoy_v3_api_field_extensions.transport_sockets.tap.v3.Tap.transport_socket:

transport_socket
  (:ref:`config.core.v3.TransportSocket <envoy_v3_api_msg_config.core.v3.TransportSocket>`, *REQUIRED*) The underlying transport socket being wrapped.
  
  

